# rpcproxy

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  publish_ghcr.yaml  release.yaml
src/: cache.rs  config.rs  error.rs  health.rs  jsonrpc.rs  lib.rs  main.rs  upstream.rs
src/cache/: mod.rs  policy.rs  store.rs
src/handler/: auth.rs  mod.rs  rpc.rs  status.rs
src/jsonrpc/: mod.rs  request.rs  response.rs
src/upstream/: backend.rs  manager.rs  mod.rs
tests/: backend.rs  cache.rs  config.rs  handler.rs  health.rs  jsonrpc.rs  upstream.rs
