[package]
name = "rpcproxy"
version = "0.5.5"
edition = "2024"
description = "High-performance JSON-RPC reverse proxy with smart caching and priority-based failover"
license = "MIT"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tower = "0.5"
wiremock = "0.6"
